--- a/_config.yml
+++ b/_config.yml
@@ -187,6 +187,9 @@ collections:
   talks:
     output: false
     permalink: /:collection/:path/
+  posts:
+    output: true
+    permalink: /:collection/:title/
 
 
 # Defaults
