--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -17,6 +17,7 @@ en: &DEFAULT_EN
   tags_label                 : "Tags:"
   categories_label           : "Categories:"
   date_label                 : "Published:"
+  modify_label               : "Updated:"
   comments_label             : "Leave a Comment"
   comments_title             : "Comments"
   more_label                 : "Learn More"
@@ -64,7 +65,8 @@ es: &DEFAULT_ES
   meta_label                 :
   tags_label                 : "Etiquetas:"
   categories_label           : "Categorías:"
-  date_label                 : "Actualizado:"
+  date_label                 : "Publicado:"
+  modify_label               : "Actualizado:"
   comments_label             : "Comentar"
   comments_title             :
   more_label                 : "Ver más"
@@ -108,7 +110,8 @@ fr: &DEFAULT_FR
   meta_label                 :
   tags_label                 : "Tags :"
   categories_label           : "Catégories :"
-  date_label                 : "Mis à jour :"
+  date_label                 : "Publié :"
+  modify_label               : "Mis à jour :"
   comments_label             : "Laisser un commentaire"
   comments_title             :
   more_label                 : "Lire plus"
